# not-art

./: build.py  gpt.dryck  index.html.dryck  pyproject.toml  style.css
