[tool.poetry]
name = "gptquotes"
version = "0.1.0"
description = ""
authors = ["John Leen <jleen@saturnvalley.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dryck = {path = "../appeldryck", develop=true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
